--- a/src/view/serve.fxml
+++ b/src/view/serve.fxml
@@ -13,10 +13,33 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox xmlns:fx="http://javafx.com/fxml"
-        fx:controller="controller.ServeController"
-        alignment="center" spacing="10"
-        styleClass="root"
-        >
+      fx:controller="controller.ServeController"
+      alignment="center" spacing="10"
+      styleClass="root">
+    
+    <HBox alignment="center">
+    <ImageView>
+        <image>
+            <Image url="@pizzeria.png"/>
+        </image>
+    </ImageView>
+    <Text styleClass="heading" text="Serve customer"/>
+    </HBox>
+    <HBox alignment="center">
+    <Button text="Create pizza" onAction="#createPizza"/>
+    <Label text="OR..." />
+    <ComboBox fx:id="popCombo" promptText="Select popular past pizza"/>
+    </HBox>
+    <HBox alignment="center">
+        <Button text="Cancel" onAction="#cancelOrder"/>
+        <Button text="Submit order" onAction="#submitOrder"/>
+        
+    </HBox>
+    <stylesheets>
+        <URL value="@style.css"/>
+    </stylesheets>
 
-    <stylesheets><URL value="@style.css"/></stylesheets>
+    <stylesheets>
+        <URL value="@style.css"/>
+    </stylesheets>
 </VBox>
