--- a/src/view/pizza.fxml
+++ b/src/view/pizza.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import java.net.URL?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
@@ -11,5 +12,34 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Label?>
 
-<VBox xmlns:fx="http://javafx.com/fxml">
+<VBox xmlns:fx="http://javafx.com/fxml"
+      fx:controller="controller.PizzaController"
+      alignment="center" spacing="10"
+      styleClass="root">
+    
+    <HBox alignment="center">
+        <ImageView>
+            <image>
+                <Image url="@pizzeria.png"/>
+            </image>
+        </ImageView>
+        <Text styleClass="heading" text="Create pizza"/>
+    </HBox>
+    <HBox alignment="center" spacing="10" styleClass="header">
+        
+        <Label text="OR..." />
+        <ComboBox fx:id="popCombo" promptText="Select past popular pizza"/>
+        <Text styleClass="heading" text="Create pizza"/>
+    </HBox>
+     <HBox alignment="center" spacing="10" styleClass="footer">
+        <Button text="Cancel" onAction="#cancel"/>
+        <Button text="Create" onAction="#create"/>
+    </HBox>
+    <stylesheets>
+        <URL value="@style.css"/>
+    </stylesheets>
+
+    <stylesheets>
+        <URL value="@style.css"/>
+    </stylesheets>
 </VBox>
