--- a/src/view/serve.fxml
+++ b/src/view/serve.fxml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
 <VBox alignment="center" spacing="10" styleClass="root" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ServeController">
 
-    <HBox alignment="CENTER">
+    <HBox alignment="CENTER" spacing="10" styleClass="header">
         <ImageView>
-            <image>
                 <Image url="@pizzeria.png" />
-            </image>
         </ImageView>
         <VBox>
             <Text styleClass="heading" text="Serve customer" />
             <HBox>
-                <Label text="Name: "/>
+                <Label text="Name: " />
                 <Text text="${controller.customer.name}" />
             </HBox>
             <HBox>
@@ -29,11 +32,11 @@
     <HBox alignment="center" spacing="10" styleClass="header">
         <Button onAction="#createPizza" text="Create pizza" />
         <Label text="OR..." />
-        <ComboBox fx:id="popCombo" items="${controller.customer.ordered}" promptText="Select past popular pizza" />
+        <ComboBox fx:id="popCombo" items="${controller.customer.ordered}" promptText="Select past popular pizza"/>
         <Button onAction="#selectPopPizza" text="Select" />
     </HBox>
     <VBox>
-        <Label alignment="center_left" styleClass="Label" text="Order" />
+        <Label alignment="center_left" styleClass="" text="Order" />
         <ListView fx:id="pizzaLv" items="${controller.customer.order}" prefHeight="200" prefWidth="300">
             <placeholder>
                 <Label text="No pizzas in order" />
@@ -41,7 +44,7 @@
         </ListView>
         <HBox alignment="center_left" spacing="10" styleClass="big">
             <Label text="Total: " />
-            <Text text="${}" />
+
         </HBox>
     </VBox>
     <HBox alignment="center" spacing="10" styleClass="footer">
