--- a/src/view/customer_add.fxml
+++ b/src/view/customer_add.fxml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.HBox?>
-<?import java.net.URL?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import java.net.*?>
+<?import javafx.scene.text.*?>
 
-<VBox xmlns:fx="http://javafx.com/fxml">
+<VBox alignment="center" spacing="10" styleClass="root" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CustomerAddController">
+    <VBox alignment="CENTER" spacing="10" styleClass="header">
+        <Text styleClass="heading" text="Add customer"/>
+    </VBox>
+    <GridPane alignment="CENTER" hgap="10" vgap="10" styleClass="header">
+        <Label text="Phone number:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+        <TextField fx:id="phoneTf" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+        <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+        <TextField fx:id="nameTf" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+    </GridPane>
+    <HBox alignment="center" spacing="10" styleClass="footer">
+        <Button text="Cancel" />
+        <Button text="Add" />
+    </HBox>
+    <stylesheets>
+        <URL value="@style.css"/>
+    </stylesheets>
 </VBox>
