--- a/src/view/pizzeria.fxml
+++ b/src/view/pizzeria.fxml
@@ -24,7 +24,7 @@
     </HBox>
     <HBox alignment="center" spacing="10" styleClass="footer">
         <Button fx:id="addCust" text="Add customer" onAction="#handleAdd"/>
-        <Button fx:id="serveCust" text="Serve customer" onAction="#handleServe"/>
+        <Button fx:id="serveCust" disable="true" text="Serve customer" onAction="#handleServe"/>
         <Button fx:id="viewReport" text="View report" onAction="#viewReport"/>
     </HBox>
     <stylesheets>
