--- a/src/view/serve.fxml
+++ b/src/view/serve.fxml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <VBox alignment="center" spacing="10" styleClass="root" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ServeController">
 
@@ -48,7 +43,7 @@
         </HBox>
     </VBox>
     <HBox alignment="center" spacing="10" styleClass="footer">
-        <Button onAction="#cancelOrder" text="Cancel" />
+        <Button fx:id="cancelOrder" onAction="#cancelOrder" text="Cancel" />
     </HBox>
     <stylesheets>
         <URL value="@style.css" />
