--- a/src/view/pizza.fxml
+++ b/src/view/pizza.fxml
@@ -1,45 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import java.net.URL?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox xmlns:fx="http://javafx.com/fxml"
-      fx:controller="controller.PizzaController"
-      alignment="center" spacing="10"
-      styleClass="root">
-    
+<VBox alignment="center" spacing="10" styleClass="root" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PizzaController">
+
     <HBox alignment="center">
         <ImageView>
-            <image>
-                <Image url="@pizzeria.png"/>
-            </image>
+                <Image url="@pizzeria.png" />
         </ImageView>
-        <Text styleClass="heading" text="Create pizza"/>
+        <Text styleClass="heading" text="Create pizza" />
     </HBox>
     <HBox alignment="center" spacing="10" styleClass="header">
-        
-        <Label text="OR..." />
-        <ComboBox fx:id="popCombo" promptText="Select past popular pizza"/>
-        <Text styleClass="heading" text="Create pizza"/>
+        <VBox spacing="10">
+            <Text styleClass="big" text="Available" />
+            <ListView />
+
+        </VBox>
+        <VBox alignment="CENTER" spacing="10">
+            <Button fx:id="rightBtn" text="-&gt;" />
+            <Button fx:id="leftBtn" text="&lt;-" />
+        </VBox>
+        <VBox spacing="10">
+            <Text styleClass="big" text="Selected" />
+            <ListView  />
+        </VBox>
     </HBox>
      <HBox alignment="center" spacing="10" styleClass="footer">
-        <Button text="Cancel" onAction="#cancel"/>
-        <Button text="Create" onAction="#create"/>
+        <Button fx:id="cancelBtn" text="Cancel" onAction="#cancelOrder" />
+        <Button text="Create" />
     </HBox>
-    <stylesheets>
-        <URL value="@style.css"/>
-    </stylesheets>
+
+
 
     <stylesheets>
-        <URL value="@style.css"/>
+        <URL value="@style.css" />
     </stylesheets>
 </VBox>
