--- a/src/view/report.fxml
+++ b/src/view/report.fxml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.Label?>
-<?import java.net.URL?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.layout.VBox?>
 
-<VBox xmlns:fx="http://javafx.com/fxml">
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+
+<VBox alignment="center" spacing="10" styleClass="root" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ReportController">
+    <HBox alignment="CENTER" spacing="10" styleClass="header">
+        <ImageView>
+            <Image url="@pizzeria.png" />
+        </ImageView>
+            <Text styleClass="heading" text="Serve customer" />
+    </HBox>
+   <VBox alignment="CENTER" spacing="10" styleClass="header">
+       <TableView prefHeight="200.0" prefWidth="200.0">
+           <columns>
+               <TableColumn text="Ingredient" />
+               <TableColumn text="Price" />
+               <TableColumn text="Sold" />
+               <TableColumn text="Income" />
+           </columns>
+       </TableView>
+   </VBox>
+   <HBox alignment="CENTER" spacing="10" styleClass="footer">
+
+   </HBox>
+    <stylesheets>
+        <URL value="@style.css" />
+    </stylesheets>
+    
 </VBox>
