--- a/src/view/serve.fxml
+++ b/src/view/serve.fxml
@@ -29,7 +29,7 @@
         <Button onAction="#createPizza" text="Create pizza" />
         <Text styleClass="big" text="OR..." />
         <ComboBox fx:id="popCombo" items="${controller.customer.ordered}" promptText="Select past popular pizza"/>
-        <Button onAction="#selectPopPizza" text="Select" />
+        <Button fx:id="selectBtn" disable="true" onAction="#selectPopPizza" text="Select" />
     </HBox>
     <VBox>
         <Text styleClass="big" text="Order" />
@@ -40,7 +40,7 @@
         </ListView>
         <HBox alignment="center_left" spacing="10" styleClass="big">
             <Label text="Total: " />
-            <Text fx:id="priceTxt" text="${controller}" />
+            <Text fx:id="priceTxt" />
         </HBox>
     </VBox>
     <HBox alignment="center" spacing="10" styleClass="footer">
