--- a/src/view/pizza.fxml
+++ b/src/view/pizza.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
 <VBox alignment="center" spacing="10" styleClass="root" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PizzaController">
 
@@ -17,28 +21,28 @@
     <HBox alignment="center" spacing="10" styleClass="header">
         <VBox spacing="10">
             <Text styleClass="big" text="Available" />
-            <ListView fx:id="ingLv" items="${controller.pizza.kitchen.ingredients}"/>
+            <ListView fx:id="ingLv" items="${controller.pizza.kitchen.ingredients}" />
             <HBox alignment="center_left" spacing="10" styleClass="big">
                 <Label text="Price: " />
-                <Text fx:id="priceTxt"/>
+                <Text fx:id="priceTxt" />
+            </HBox>
+            <HBox alignment="center" spacing="10" styleClass="header">
+                <Text fx:id="stringStatus"/>
             </HBox>
         </VBox>
         <VBox alignment="CENTER" spacing="10">
             <Button fx:id="rightBtn" text="-&gt;" />
             <Button fx:id="leftBtn" text="&lt;-" />
         </VBox>
-        <VBox spacing="10">
+        <VBox  spacing="10">
             <Text styleClass="big" text="Selected" />
-            <ListView />
+            <ListView fx:id="selectedLv" />
         </VBox>
     </HBox>
      <HBox alignment="center" spacing="10" styleClass="footer">
-        <Button fx:id="cancelBtn" text="Cancel" onAction="#cancelOrder" />
-        <Button text="Create" />
+        <Button fx:id="cancelBtn" onAction="#cancelOrder" text="Cancel" />
+        <Button fx:id="createBtn" disable="true" text="Create" />
     </HBox>
-
-
-
     <stylesheets>
         <URL value="@style.css" />
     </stylesheets>
